changed reading of the current user mechanic in follow and unfollow handlers
Deleted middleware for user context in users/userID route
